RESOLVED FIXED270930
Fix bugprone-use-after-move warnings in `WebExtensionContext::loadDeclarativeNetRequestRules`
https://bugs.webkit.org/show_bug.cgi?id=270930
Summary Fix bugprone-use-after-move warnings in `WebExtensionContext::loadDeclarative...
Charlie Wolfe
Reported 2024-03-13 14:47:13 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-13 14:47:29 PDT
Charlie Wolfe
Comment 2 2024-03-13 14:50:07 PDT
EWS
Comment 3 2024-03-13 15:19:04 PDT
Committed 276048@main (de084069b121): <https://commits.webkit.org/276048@main> Reviewed commits have been landed. Closing PR #25838 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.