Fix bugprone-use-after-move warnings in `WebExtensionContext::loadDeclarativeNetRequestRules` https://bugs.webkit.org/show_bug.cgi?id=270930 rdar://124554555

Reviewed by Timothy Hatcher.

`completionHandler` was unnecessarily being moved into several lambda captures.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::loadDeclarativeNetRequestRules):

Canonical link: https://commits.webkit.org/276048@main